# py-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
e2e/dependencies/consumer/: Cargo.toml
e2e/dependencies/dependency1/: Cargo.toml
e2e/workspace/crate1/: Cargo.toml
e2e/workspace/crate2/: Cargo.toml
e2e/workspace/parent/: Cargo.toml
e2e/workspace/renamed/: Cargo.toml
example/: Cargo.toml
example/bindings/: test.rs
example/src/: lib.rs
macros/: Cargo.toml
macros/src/: deps.rs  lib.rs  utils.rs
macros/src/attr/: enum.rs  field.rs  struct.rs
macros/src/types/: enum.rs  mod.rs  named.rs  newtype.rs  tuple.rs  type_as.rs  type_override.rs  unit.rs
py-rs/: Cargo.toml
py-rs/src/: chrono.rs  export.rs  lib.rs  serde_json.rs  tokio.rs
py-rs/src/export/: path.rs
py-rs/tests/integration/: arrays.rs  bound.rs  bson.rs  chrono.rs  complex_flattened_type.rs  concrete_generic.rs  docs.rs  enum_flattening.rs  enum_flattening_nested.rs  enum_struct_rename_all.rs  enum_variant_annotation.rs  export_manually.rs  field_rename.rs  flatten.rs  generic_fields.rs  generic_without_import.rs  generics.rs  generics_flatten.rs  hashmap.rs  hashset.rs  impl_primitive.rs  imports.rs  indexmap.rs  infer_as.rs  issue_168.rs  issue_232.rs  issue_308.rs  issue_317.rs  issue_338.rs  issue_70.rs  issue_80.rs  leading_colon.rs  lifetimes.rs  list.rs  nested.rs  optional_field.rs  path_bug.rs  ranges.rs  raw_idents.rs  recursion_limit.rs  (+27 more)
ts-rs/: Cargo.toml
ts-rs/src/: lib.rs
