[package]
name = "example"
version = "0.1.0"
authors = ["Matthias Ruiz <matthias.ruiz@blue-chestnut.com>"]
edition = "2021"

[dependencies]
py-rs = { path = "../py-rs", features = ["serde-compat", "uuid-impl"] }
serde = { version = "1", features = ["derive", "rc"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
