[package]
name = "py-rs-macros"
version = "0.1.1"
authors = ["Matthias Ruiz <matthias.ruiz@blue-chestnut.com>"]
edition = "2021"
description = "derive macro for py-rs"
license = "MIT"
homepage = "https://github.com/Blue-Chestnut/py-rs"
repository = "https://github.com/Blue-Chestnut/py-rs"

[features]
serde-compat = ["termcolor"]
no-serde-warnings = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.28", features = ["full", "extra-traits"] }
termcolor = { version = "1", optional = true }
